News UAT/force-app/main/default/objects/Email_Case_Origin_Mapping__c/Email_Case_Origin_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is mapping table for queue email address and its case origin. The reason behind this table is that we can&#39;t query case origin value from email-to-case setting because it&#39;s in metadata.</description>
    <label>Email Case Origin Mapping</label>
</CustomObject>