News UAT/force-app/main/default/objects/Email_Case_Origin_Mapping__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <description>Queue email case origin</description>
    <inlineHelpText>Queue email case origin</inlineHelpText>
    <label>Case Origin</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>