News UAT/force-app/main/default/objects/Email_Case_Origin_Mapping__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Queue Email
2015-10 SFE-688 Updated label, Help Text and unchecked Unique</description>
    <inlineHelpText>Queue Email (Primary)</inlineHelpText>
    <label>Email (Primary)</label>
    <required>true</required>
    <type>Email</type>
</CustomField>