News UAT/force-app/main/default/objects/Email_Case_Origin_Mapping__c/fields/Email_Alias__c.field-meta.xml
<CustomField>
    <fullName>Email_Alias__c</fullName>
    <description>2015-10 SFE-688</description>
    <inlineHelpText>Alias email that will be mapped to Primary Email, for Queue assignment</inlineHelpText>
    <label>Email (Alias)</label>
    <required>true</required>
    <type>Email</type>
</CustomField>