News UAT/force-app/main/default/objects/Email_Case_Origin_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Origin__c</columns>
    <columns>Email_Alias__c</columns>
    <columns>Email__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>